high-charts needs data to render properly

--- a/app/templates/components/gh-nav-menu.hbs
+++ b/app/templates/components/gh-nav-menu.hbs
@@ -41,7 +41,7 @@
             <li>{{#link-to "settings.code-injection" classNames="gh-nav-settings-code-injection"}}<i class="icon-code"></i>Code Injection{{/link-to}}</li>
             <li>{{#link-to "settings.apps" classNames="gh-nav-settings-apps"}}<i class="icon-box"></i>Apps{{/link-to}}</li>
             <li>{{#link-to "settings.labs" classNames="gh-nav-settings-labs"}}<i class="icon-labs"></i>Labs{{/link-to}}</li>
-            <li>{{#link-to "settings.analytics" classNames="gh-nav-settings-labs"}}<i class="icon-labs"></i>Analytics{{/link-to}}</li>
+            <li>{{#link-to "settings.high-charts" classNames="gh-nav-settings-labs"}}<i class="icon-labs"></i>Analytics{{/link-to}}</li>
         </ul>
     {{/if}}
 </section>
