--- a/app/templates/settings/high-charts.hbs
+++ b/app/templates/settings/high-charts.hbs
@@ -1,8 +1,8 @@
 <div class="container" style="margin-left:50px;">
 <div class="row">
   <div class="chart">
-    {{high-charts content=barData }}
-    meow
+    {{high-charts content=barData chartOptions=plotOptions}}
+    <h1>Analytics</h1>
   </div>
 </div>
 </div>
